# osu-twitchbot

./: Cargo.toml  Cross.toml  Justfile  README.md  build.rs
offsets/: lazer.json  stable.json
src/: credentials.rs  logging.rs  main.rs  placeholders.rs  preferences.rs  twitch.rs
src/gui/: components.rs  core.rs  mod.rs  theme.rs
src/osu/: core.rs  lazer.rs  mod.rs  pp.rs  stable.rs
src/updater/: core.rs  download.rs  install.rs  mod.rs  splash.rs
