[package]
name = "osu-twitchbot"
version = "1.0.0-alpha.3"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dark-light = "1"
iced = { version = "0.14.0", features = ["tokio", "image"] }
owo-colors = "4"
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "vendored"] }
open = "5.3.3"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
thiserror = "2.0"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "sync", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
image = "0.25.9"
sha2 = "0.10"
hex = "0.4"
semver = "1.0"
tempfile = "3"
futures-util = "0.3"
indicatif = "0.17"

[build-dependencies]
winresource = "0.1.28"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
]}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
